# CodeAssignement

./: README.md
HAIVE-OS/: HAIVE4_robot_state_init.txt  README.md
HAIVE-OS/install/: local_setup.sh  setup.sh
HAIVE-OS/install/hos_device_simulation/share/hos_device_simulation/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
HAIVE-OS/install/hos_device_simulation/share/hos_device_simulation/layouts/: test_layout.json
HAIVE-OS/robot_state_init/: HAIVE4_robot_state_init.txt  README.md
HAIVE-OS/src/hos_device_layer/: package.xml  setup.cfg  setup.py
HAIVE-OS/src/hos_device_layer/hos_device_layer/: device_manager.py  hos_device_api.py  hos_device_api_raw.py  services.py  topics.py
HAIVE-OS/src/hos_device_layer/test/: test_device_api.py  test_device_manager.py  test_learning.py
HAIVE-OS/src/hos_generator/: setup.cfg  setup.py
HAIVE-OS/src/hos_generator/hos_generator/: hos_device_layer.py  hos_robot_state.py
HAIVE-OS/src/hos_interfaces/: CMakeLists.txt  package.xml
HAIVE-OS/src/hos_interfaces/msg/: ConnectionInfo.msg  DeviceCommandResult.msg  DeviceStream.msg  TypedField.msg
HAIVE-OS/src/hos_interfaces/srv/: BehaviorRequestMoveContainer.srv  DeviceCommand.srv  RobotStateInit.srv  SetStateAPICall.srv
HAIVE-OS/src/hos_robot_state/: setup.cfg  setup.py
HAIVE-OS/src/hos_robot_state/hos_robot_state/: container_state_updater.py  haive_graph.py  robot_state_init_service.py  sensors_callback.py  state_manager.py  (+1 more)
HAIVE-OS/src/hos_run/: package.xml  setup.cfg  setup.py
HAIVE-OS/src/hos_utils/: package.xml  setup.cfg  setup.py
(+797 files in other folders)
