<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hos_device_simulation</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="przybilla@molcure.io">ubuntu</maintainer>
  <license>TODO: License declaration</license>

  <depend>rosbridge_server</depend>
  <depend>python3-pip</depend>
  <depend>roslibpy-pip</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <depend>hos_device_layer</depend>
  <depend>hos_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
